change z-index for modal to fix but in small screens

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -88,11 +88,11 @@ html, body {
 
 /* modal to be clickable in mobile device*/
 .modal-backdrop {
-    z-index: 1040 !important;
+    z-index: 1050 !important;
 }
 
 .modal {
-    z-index: 1050 !important;
+    z-index: 1060 !important;
 }
 
 
